--- a/Sidebar.module.scss
+++ b/Sidebar.module.scss
@@ -9,7 +9,6 @@
     z-index: 10;
     background: white;
     left: 0;
-    padding-left: 10px;
     a {
         position: relative;
         opacity: 0.72;
