--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -36,12 +36,14 @@
         &::before {
             width: 20px;
             visibility: visible;
+            line-height: 1.5;
         }
     }
 
     .flexContainer {
         display: flex;
         align-items: center;
+        margin-right: 5%;
         &::before{
            --app-registration-tab-active-underline: var(--background);
         }
@@ -60,6 +62,7 @@
     }
     .topNav {
         height: 32px;
+        padding-left: 11px;
         justify-content: center;
         box-shadow: inset 0 -1px 0 0 rgba(255, 255, 255, 0.1);
 
@@ -102,7 +105,6 @@
             }
 
             .hamburger {
-                // add background image hamburger_icon.svg
                 width: 16px;
                 height: 16px;
                 background-image: url(/img/hamburger_menu.svg);
