--- a/index.scss
+++ b/index.scss
@@ -27,7 +27,7 @@ body {
   overflow-x: hidden;
 }
 .doc-content{
-  padding: 175px 120px 80px;
+  padding: 188px 0px 80px;
   display: flex;
   min-height: 95vh;
   justify-content: center;
